--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,7 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 
 # End of https://www.toptal.com/developers/gitignore/api/unity
+
+# François ignore
+
+git_next_message.md
